--- a/Web.html
+++ b/Web.html
@@ -58,7 +58,7 @@
                          <!-------- Jose T Joya ---------->
     <div>
         <div id="Jname">
-            <img id="all" src="/images/Artist/220px-Jose_Joya.jpg" alt="" width="250" height="250">
+            <img id="all" src="images/Artist/220px-Jose_Joya.jpg" alt="" width="250" height="250">
             <h2> José T. Joya<p>Born: June 3, 1931 <br>
                 Died: May 11, 1995</p> </h2>
                 <br><br><br><br><br><br>
@@ -148,7 +148,7 @@
                                 <!--------Ang Kiukok---------->
      <div>
         <div id="Jname">
-            <img id="all" src="/images/Artist/ang.jpg" alt="" width="250" height="250">
+            <img id="all" src="images/Artist/ang.jpg" alt="" width="250" height="250">
             <h2> Ang Kiukok<p>Born: March 1, 1931 <br>
                 Died: May 9, 2005</p> </h2>
                 <br><br><br><br><br><br>
@@ -211,7 +211,7 @@
                     <!---------------Abdulmari Imao--------------->
     <div>
         <div id="Jname">
-            <img id="all" src="/images/Artist/abdulmari asia imao_01.jpg" alt="" width="250" height="250">
+            <img id="all" src="images/Artist/abdulmari asia imao_01.jpg" alt="" width="250" height="250">
             <h2> Abdulmari Imao<p>Born: 14 January 1936 <br>
                 Died: 16 December 2014</p> </h2>
                 <br><br><br><br><br>
@@ -290,7 +290,7 @@
     <div>
         <br>
         <div id="Jname">
-            <img id="all" src="/images/Artist/guillermo.jpg" alt="" width="250" height="250">
+            <img id="all" src="images/Artist/guillermo.jpg" alt="" width="250" height="250">
             <h3>Guillermo Tolentino<p>Born: July 24, 1890 <br>
                 Died: July 12, 1976</p> </h3>
                 <br><br><br><br><br><br>
@@ -372,7 +372,7 @@
     <div>
         <br>
         <div id="Vname">
-            <img id="all" src="/images/Artist/download.jpg" alt="" width="250" height="250">
+            <img id="all" src="images/Artist/download.jpg" alt="" width="250" height="250">
             <h3>Vicente Manansala<p>Born: January 22, 1910 <br>
                 Died: August 22, 1981</p> </h3>
                 <br><br><br><br><br><br><br>
